--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Average Calculator</title>
+    <title>InvestMate: Stock Averager</title>
+    <meta name="description" content="InvestMate: Stock Averager – Easily calculate the additional shares needed to reach a desired average price or invest within a set budget. Optimize your stock investments with this simple, responsive tool.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Icons/favicon-16x16.png">
+    <link rel="manifest" href="/Icons/site.webmanifest">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -21,31 +26,31 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="text-center">Stock Average Calculator</h2>
+        <h1 class="text-center">InvestMate: Stock Averager</h1>
         <div class="mb-3">
-            <label class="form-label">Current Holdings (Units)</label>
+            <label class="form-label"><h3>Current Holdings (Units)</h3></label>
             <input type="number" class="form-control" id="currentUnits" placeholder="Enter your current stock units">
         </div>
         <div class="mb-3">
-            <label class="form-label">Buy Price Per Unit</label>
+            <label class="form-label"><h3>Buy Price Per Unit</h3></label>
             <input type="number" class="form-control" id="buyPrice" placeholder="Enter the buy price per unit">
         </div>
         <div class="mb-3">
-            <label class="form-label">Current Price Per Unit</label>
+            <label class="form-label"><h3>Current Price Per Unit</h3></label>
             <input type="number" class="form-control" id="currentPrice" placeholder="Enter the current market price per unit">
         </div>
-        <h4 class="mt-3">Choose One:</h4>
+        <h2 class="mt-3">Choose One:</h2>
         <div class="mb-3">
-            <label class="form-label">Available Amount for Additional Investment</label>
+            <label class="form-label"><h3>Available Amount for Additional Investment</h3></label>
             <input type="number" class="form-control" id="availableAmount" placeholder="Enter available amount">
         </div>
-        <h5 class="text-center">OR</h5>
+        <h2 class="text-center">OR</h2>
         <div class="mb-3">
-            <label class="form-label">Desired Average Price</label>
+            <label class="form-label"><h4>Desired Average Price</h4></label>
             <input type="number" class="form-control" id="desiredAverage" placeholder="Enter desired average price">
         </div>
-        <button class="btn btn-success mt-2" id="calculate">Calculate Required Units</button>
-        <button class="btn btn-warning mt-2" id="clear">Clear Fields</button>
+        <button class="btn btn-success mt-2" id="calculate"><h4>Calculate Required Units</h4></button>
+        <button class="btn btn-warning mt-2" id="clear"><h4>Clear Fields</h4></button>
         
         <h4 class="mt-3" id="result"></h4>
     </div>
