--- a/index.html
+++ b/index.html
@@ -26,31 +26,31 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center">InvestMate: Stock Averager</h1>
+        <h2 class="text-center">InvestMate: Stock Averager</h2>
         <div class="mb-3">
-            <label class="form-label"><h3>Current Holdings (Units)</h3></label>
+            <label class="form-label">Current Holdings (Units)</label>
             <input type="number" class="form-control" id="currentUnits" placeholder="Enter your current stock units">
         </div>
         <div class="mb-3">
-            <label class="form-label"><h3>Buy Price Per Unit</h3></label>
+            <label class="form-label">Buy Price Per Unit</label>
             <input type="number" class="form-control" id="buyPrice" placeholder="Enter the buy price per unit">
         </div>
         <div class="mb-3">
-            <label class="form-label"><h3>Current Price Per Unit</h3></label>
+            <label class="form-label">Current Price Per Unit</label>
             <input type="number" class="form-control" id="currentPrice" placeholder="Enter the current market price per unit">
         </div>
         <h2 class="mt-3">Choose One:</h2>
         <div class="mb-3">
-            <label class="form-label"><h3>Available Amount for Additional Investment</h3></label>
+            <label class="form-label">Available Amount for Additional Investment</label>
             <input type="number" class="form-control" id="availableAmount" placeholder="Enter available amount">
         </div>
         <h2 class="text-center">OR</h2>
         <div class="mb-3">
-            <label class="form-label"><h4>Desired Average Price</h4></label>
+            <label class="form-label">Desired Average Price</label>
             <input type="number" class="form-control" id="desiredAverage" placeholder="Enter desired average price">
         </div>
-        <button class="btn btn-success mt-2" id="calculate"><h4>Calculate Required Units</h4></button>
-        <button class="btn btn-warning mt-2" id="clear"><h4>Clear Fields</h4></button>
+        <button class="btn btn-success mt-2" id="calculate">Calculate Required Units</button>
+        <button class="btn btn-warning mt-2" id="clear">Clear Fields</button>
         
         <h4 class="mt-3" id="result"></h4>
     </div>
