--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InvestMate: Stock Averager</title>
-    <meta name="description" content="InvestMate: Stock Averager – Easily calculate the additional shares needed to reach a desired average price or invest within a set budget. Optimize your stock investments with this simple, responsive tool.">
+    <title>Stock Average Calculator</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/Icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/Icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/Icons/favicon-16x16.png">
-    <link rel="manifest" href="/Icons/site.webmanifest">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -26,7 +21,7 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="text-center">InvestMate: Stock Averager</h2>
+        <h2 class="text-center">Stock Average Calculator</h2>
         <div class="mb-3">
             <label class="form-label">Current Holdings (Units)</label>
             <input type="number" class="form-control" id="currentUnits" placeholder="Enter your current stock units">
@@ -39,12 +34,12 @@
             <label class="form-label">Current Price Per Unit</label>
             <input type="number" class="form-control" id="currentPrice" placeholder="Enter the current market price per unit">
         </div>
-        <h2 class="mt-3">Choose One:</h2>
+        <h4 class="mt-3">Choose One:</h4>
         <div class="mb-3">
             <label class="form-label">Available Amount for Additional Investment</label>
             <input type="number" class="form-control" id="availableAmount" placeholder="Enter available amount">
         </div>
-        <h2 class="text-center">OR</h2>
+        <h5 class="text-center">OR</h5>
         <div class="mb-3">
             <label class="form-label">Desired Average Price</label>
             <input type="number" class="form-control" id="desiredAverage" placeholder="Enter desired average price">
@@ -66,6 +61,7 @@
             let currentInvestment = currentUnits * buyPrice;
             let totalInvestment = currentInvestment;
             let remainingAmount = 0;
+            let requiredAmount = 0;
 
             if (availableAmount > 0) {
                 newUnits = Math.floor(availableAmount / currentPrice);
@@ -78,6 +74,7 @@
                     return;
                 }
                 totalInvestment += newUnits * currentPrice;
+                requiredAmount = newUnits * currentPrice;
             } else {
                 document.getElementById('result').textContent = 'Please enter either available amount or desired average price';
                 return;
@@ -89,7 +86,7 @@
                 Additional Units to Buy: <b>${newUnits}</b><br>
                 New Average Price: <b>${newAverage.toFixed(2)}</b><br>
                 Total Shares After Purchase: <b>${totalShares}</b><br>
-                ${availableAmount > 0 ? `Remaining Amount: <b>${remainingAmount.toFixed(2)}</b>` : ''}
+                ${availableAmount > 0 ? `Remaining Amount: <b>${remainingAmount.toFixed(2)}</b>` : `Required Amount: <b>${requiredAmount.toFixed(2)}</b>`}
             `;
         });
         
