--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Average Calculator</title>
+    <title>Investmate: Stock Average Calculator</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         body {
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="text-center">Stock Average Calculator</h2>
+        <h2 class="text-center">Investmate: Stock Average Calculator</h2>
         <div class="mb-3">
             <label class="form-label">Current Holdings (Units)</label>
             <input type="number" class="form-control" id="currentUnits" placeholder="Enter your current stock units">
